--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -4,17 +4,18 @@
     <title>Tab Find</title>
     <style>
       body {
-        min-width: 357px;
+        width: 357px;
+        max-height: 600px;
         overflow-x: hidden;
         font-size: 13px;
         color: #333;
       }
 
       #debugbox {
-        width: 90%;
+        width: 350px;
         margin: 5px auto;
         height: 120px;
-        display: block;
+        display: none;
       }
 
       #search {
@@ -47,6 +48,10 @@
         background-color: rgb(255, 208, 121);
       }
 
+      li.tab.preselect > span.tabTitle {
+        background-color: rgb(255, 208, 121);
+      }
+
       li.tab>img.tabFavicon {
         width: 16px;
         height: 16px;
@@ -72,6 +77,7 @@
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
      -->
     <script src="js/jquery-1.10.2.min.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/main.js"></script>
   </head>
   <body>
