Quick go to result tab when only one result
If search returns only 1 result, hit enter will switch to the result tab
directly without the need to preselect it

--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -87,11 +87,11 @@
     <input id="clear" type="button" value="clear"/>
     <div id="results">
         <span class="resultsTitle"></span>
-    	<ul class="tabList"></ul>
+    	<ul id="resultTabList" class="tabList"></ul>
     </div>
     <hr/>
     <div id="alltabs">
-    	<ul class="tabList"></ul>
+    	<ul id="allTabList" class="tabList"></ul>
     </div>
   </body>
 </html>
