--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -31,17 +31,28 @@
       }
 
       ul.tabList {
-        padding-left: 5px;
+        padding-left: 0px;
       }
 
       li.tab {
         cursor: pointer;
         list-style: none;
         margin: 5px 0;
+	position: relative;
       }
 
-      li.tab.highlight > span.tabTitle {
-        background-color: rgb(255, 208, 121);
+      li.tab:before {
+	content: "\0";
+	display: inline-block;
+	width: 3px;
+	height: 20px;
+	margin-right: 5px;
+	position: relative;
+	bottom: 6px;
+      }
+
+      li.tab.highlight:before {
+	background-color: rgb(255, 163, 0);
       }
 
       li.tab:hover > span.tabTitle {
@@ -65,8 +76,9 @@
         overflow: hidden;
         word-wrap: break-word;
         height: 14px;
-        line-height: 14px;
-        padding: 2px 0 0 2px;
+        line-height: 15px;
+        padding: 2px 0 2px 3px;
+	border-radius: 3px;
       }
     </style>
 
