--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -11,6 +11,23 @@
         color: #333;
       }
 
+      div.divider {
+        width: 100%;
+        height: 0;
+        border-top: 1px solid silver;
+        text-align: center;
+        position: relative;
+        margin: 10px 0;
+      }
+
+      div.divider>span {
+        display: inline-block;
+        position: relative;
+        background-color: white;
+        top: -8px;
+        padding: 0 5px;
+      }
+
       #debugbox {
         width: 350px;
         margin: 5px auto;
@@ -26,12 +43,6 @@
         border: 1px solid silver;
       }
 
-      #results {
-      }
-
-      #alltabs {
-      }
-
       ul.tabList {
         padding-left: 0px;
       }
@@ -40,7 +51,7 @@
         cursor: pointer;
         list-style: none;
         padding: 5px 0 5px 5px;
-	margin: 2px 0;
+        margin: 2px 0;
         position: relative;
       }
 
@@ -51,7 +62,7 @@
         height: 27px;
         position: absolute;
         bottom: 0px;
-	left: -3px
+        left: -3px
       }
 
       li.tab>* {
@@ -99,13 +110,17 @@
     <textarea id="debugbox"></textarea>
     <input id="search" type="text"/>
     <input id="clear" type="button" value="clear"/>
-    <div id="results">
-        <span class="resultsTitle"></span>
-        <ul id="resultTabList" class="tabList"></ul>
+    <div class="divider">
+      <span id="resultsTitle">Recent</span>
     </div>
-    <hr/>
-    <div id="alltabs">
-        <ul id="allTabList" class="tabList"></ul>
+    <div id="resultsContainer">
+      <ul id="resultTabList" class="tabList"></ul>
+    </div>
+    <div class="divider">
+      <span id="allTitle">Open tabs (0)</span>
+    </div>
+    <div id="allTabsContainer">
+      <ul id="allTabList" class="tabList"></ul>
     </div>
   </body>
 </html>
