--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -85,12 +85,68 @@
       }
 
       li.tab>span.tabTitle {
-        width: 310px;
+        width: 305px;
         display: inline-block;
         overflow: hidden;
         word-wrap: break-word;
         height: 16px;
         line-height: 16px;
+      }
+
+      div.close {
+        width: 18px;
+        height: 18px;
+        border: 1px dashed transparent;
+        border-radius: 9px;
+        position: relative;
+        display: inline-block;
+        background-color: white;
+        visibility: hidden;
+      }
+
+      li.tab:hover>div.close, li.tab.preselect>div.close {
+        visibility: visible;
+      }
+
+      div.close > div {
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-style: solid;
+      }
+
+      div.close > div.center {
+        top: 3px;
+        left: 3px;
+        border: 6px solid rgb(255, 222, 160);
+      }
+
+      div.close > div.top {
+        border-color: white transparent transparent transparent;
+        border-width: 6px 6px 0 6px;
+        top: 1px;
+        left: 3px;
+      }
+
+      div.close > div.right {
+        border-color: transparent white transparent transparent;
+        border-width: 6px 6px 6px 0;
+        top: 3px;
+        right: 1px;
+      }
+
+      div.close > div.bottom {
+        border-color: transparent transparent white transparent;
+        border-width: 0 6px 6px 6px;
+        bottom: 1px;
+        left: 3px;
+      }
+
+      div.close > div.left {
+        border-color: transparent transparent transparent white;
+        border-width: 6px 0 6px 6px;
+        top: 3px;
+        left: 1px;
       }
     </style>
 
