--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -59,7 +59,7 @@
         content: "\0";
         display: inline-block;
         width: 3px;
-        height: 27px;
+        height: 100%;
         position: absolute;
         bottom: 0px;
         left: -3px
