--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -85,12 +85,13 @@
       }
 
       li.tab>span.tabTitle {
-        width: 305px;
+        width: 300px;
         display: inline-block;
         overflow: hidden;
-        word-wrap: break-word;
+        white-space: nowrap;
         height: 16px;
         line-height: 16px;
+        margin-right: 5px;
       }
 
       div.close {
